--- a/backend_core/static/css/home.css
+++ b/backend_core/static/css/home.css
@@ -208,7 +208,7 @@ nav{
 }
 
 
-@media (min-width:1000px){
+@media (min-width:768px){
 
     .search-row input, .search-row
     button {
